Fixes Polymer version issue

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <base href="/">
     <title> Shuttle Tracking </title>
     <link rel="icon" href="/static/images/favicon.ico">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/static/css/application.css">
     <!-- Google Maps API -->
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <!-- Polymer dependencies -->
@@ -20,7 +22,7 @@
     <script src="/static/js/app.js"></script>
   </head>
   <body>
-    <div ng-view>
+    <div class="page-container" ng-view>
     </div>
   </body>
 </html>
