Adds periodic updates in Polymer element for tracking, angular controllers, angular views, and refactor backend database object to include collections along with database session

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="/bower_components/platform/platform.js"></script>
     <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="/bower_components/polymer/polymer.html">
+    <link rel="import" href="/bower_components/core-ajax/core-ajax.html">
     <!-- Custom Polymer elements -->
     <link rel="import" href="/static/components/shuttles-map.html">
   </head>
