--- a/admin.html
+++ b/admin.html
@@ -6,17 +6,6 @@
     <link rel="icon" href="/static/images/favicon.ico">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/static/css/application.css">
-    <!-- Polymer dependencies -->
-    <script src="/bower_components/platform/platform.js"></script>
-    <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="import" href="/bower_components/polymer/polymer.html">
-    <!-- Polymer Imports -->
-    <link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
-    <link rel="import" href="/bower_components/core-menu/core-menu.html">
-    <link rel="import" href="/bower_components/core-item/core-item.html">
-    <link rel="import" href="/bower_components/core-header-panel/core-header-panel.html">
-    <link rel="import" href="/bower_components/core-drawer-panel/core-drawer-panel.html">
-    <link rel="import" href="/bower_components/core-scaffold/core-scaffold.html">
     <!-- Angular dependencies --> 
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
@@ -25,27 +14,15 @@
     <script src="/static/js/app.js"></script>
   </head>
   <body>
-    <core-scaffold>
-      <core-header-panel navigation flex>
-        <core-toolbar id="navheader">
-          <span>
-            <a href="/admin/vehicles" target="_self">Fleet Management</a>
-          </span>
-        </core-toolbar>
-        <core-menu>
-          <core-item label="Vehicles"><a href="/admin/vehicles"></a></core-item>
-          <core-item label="Routes"><a href="/admin/routes"></a></core-item>
-          <core-item label="Stops"><a href="/admin/stops"></a></core-item>
-          <core-item label="Tracking"><a href="/admin/tracking"></a></core-item>
-          <core-item label="Schedule"><a href="/admin/schedule"></a></core-item>
-          <core-item label="Users"><a href="/admin/users"></a></core-item>
-        </core-menu>
-      </core-header-panel>
-      <span tool ng-bind="title"></span>
-      <div class="content">
-        <div class="page-container" ng-view>
-        </div>
-      </div>
-    </core-scaffold>
+    <ul>
+      <li> <a href="/admin/vehicles">Vehicles</a> </li>
+      <li> <a href="/admin/routes">Routes</a> </li>
+      <li> <a href="/admin/stops">Stops</a></core-item> </li>
+      <li> <a href="/admin/tracking">Tracking</a> </li>
+      <li> <a href="/admin/schedule">Schedule</a> </li>
+      <li> <a href="/admin/users">Users</a> </li>
+    </ul>
+    <div class="page-container" ng-view>
+    </div>
   </body>
 </html>
