Add styling elements to vehicles and routes views

--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,8 @@
   <head>
     <title> Shuttle Tracking - Fleet Management </title>
     <link rel="icon" href="/static/images/favicon.ico">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/static/css/application.css"> 
     <!-- Polymer dependencies -->
     <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="/bower_components/polymer/polymer.html">
