--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,7 @@
     <link rel="import" href="/static/components/shuttles-map.html">
     <link rel="import" href="/static/components/tracking-vehicles.html">
     <link rel="import" href="/static/components/tracking-routes.html">
+    <link rel="import" href="/static/components/tracking-stops.html">
   </head>
 
   <body unresolved class="fullbleed layout vertical">
@@ -29,6 +30,7 @@
           <paper-tabs class="flex" selected="{{selected}}">
             <paper-tab> Vehicles </paper-tab>
             <paper-tab> Routes </paper-tab>
+            <paper-tab> Stops </paper-tab>
           </paper-tabs>
         </paper-toolbar>
         <iron-pages selected="{{selected}}">
@@ -39,6 +41,9 @@
           <section>
             <!-- Routes -->
             <tracking-routes lat="42.730172" lng="-73.678803" zoom="15"></tracking-routes>
+          </section>
+          <section> 
+            <tracking-stops lat="42.730172" lng="-73.678803" zoom="15"></tracking-stops>
           </section>
         </iron-pages>
       </paper-header-panel>
