Fix css not showing up.
It is weird that putting css in individual html files will not work as a <link> tag, maybe it won't work unless it is in root of head or body.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
     <!-- Custom Polymer elements -->
     <link rel="import" href="/static/components/shuttles-map.html">
+
+    <link rel="stylesheet" type="text/css" href="/static/css/tracking-stops.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/tracking-routes.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/tracking-vehicles.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/shuttles-map.css">
+
   </head>
   <body>
     <shuttles-map lat="42.730172" lng="-73.678803" zoom="15"></shuttles-map>
