--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Custom Polymer elements -->
     <link rel="import" href="/static/components/shuttles-map.html">
 
+    <!-- CSS for content inside frames -->
     <link rel="stylesheet" type="text/css" href="/static/css/tracking-stops.css">
     <link rel="stylesheet" type="text/css" href="/static/css/tracking-routes.css">
     <link rel="stylesheet" type="text/css" href="/static/css/tracking-vehicles.css">
