added logout button

--- a/admin.html
+++ b/admin.html
@@ -37,7 +37,10 @@
 
           </paper-tabs>
         </paper-toolbar>
-        <center><p><a href = "/admin/logout/" >logout</a></p></center>
+        <div align = "center">
+          <br>
+          <a href = "/admin/logout"> logout </a>
+        </div>
         <iron-pages selected="{{selected}}">
           <section>
             <!-- Vehicles -->
