--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Shuttle Tracking</title>
-    <link rel="icon" href="/static/images/favicon.ico">
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="/static/css/application.css">
-    <!-- Polymer dependencies -->
-    <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="import" href="/bower_components/polymer/polymer.html">
-    <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
-    <!-- Custom Polymer elements -->
-    <link rel="import" href="/static/components/shuttles-map.html">
-    <!-- CSS for content inside frames -->
-    <link rel="stylesheet" type="text/css" href="/static/css/tracking-stops.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/tracking-routes.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/tracking-vehicles.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/shuttles-map.css">
-  </head>
-  <body>
-    <shuttles-map lat="42.730172" lng="-73.678803" zoom="15"></shuttles-map>
-  </body>
+
+<head>
+  <title>Shuttle Tracking</title>
+  <link rel="icon" href="/static/images/favicon.ico">
+  <link rel="stylesheet" href="/static/css/application.css">
+
+  <!--use leaflet.js for displaying and modifying the map-->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
+  integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
+  crossorigin=""/>
+
+  <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
+  integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
+  crossorigin=""></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+</head>
+
+<body>
+  <div id="mapid" style="height:100%;"></div>
+
+  </script>
+</body>
+
+  <script src="static/js/app.js"></script>
+
+
 </html>
