updated style of ui

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
 </head>
 
 <body>
-  <div id="mapid" style="height:100%;"></div>
+  <div class="titleBar">
+    <img src="static/images/logo.png" style="height:100%;"></img>
+    <div class="navbar" style="float:right; height:100%;">
+      <form action="https://github.com/wtg/shuttletracker" style = "height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 30px; float:left;">
+        <button class="btn btn-outline-danger btn-sm" style="">View On Github</button>
+      </form>
+      <form action="https://webtech.union.rpi.edu/" style="height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 30px; float:left;">
+        <button class="btn btn-outline-danger btn-sm" style="">Web Tech Group</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="floating-logo"><img style="height: 100%;" src="static/images/wtg.svg"></img></div>
+  <div id="mapid" style="height: 95%; z-index:0;"></div>
 
   </script>
 </body>
