changed some buttons for sidney

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <img src="static/images/logo.png" style="height:100%;"></img>
     <div class="navbar" style="float:right; height:100%;">
       <form action="https://github.com/wtg/shuttletracker" style = "height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 30px; float:left;">
-        <button class="btn btn-outline-danger btn-sm" style="">View On Github</button>
+        <button class="btn btn-outline-danger btn-sm" style="">View on GitHub</button>
       </form>
       <form action="https://webtech.union.rpi.edu/" style="height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 30px; float:left;">
-        <button class="btn btn-outline-danger btn-sm" style="">Web Tech Group</button>
+        <button class="btn btn-outline-danger btn-sm" style="">WebTech Group</button>
       </form>
     </div>
   </div>
