change leaflet to self hosted

--- a/admin.html
+++ b/admin.html
@@ -44,7 +44,7 @@
         <iron-pages selected="{{selected}}">
           <section>
             <!-- Vehicles -->
-            <tracking-vehicles><tracking-vehicles>
+            <tracking-vehicles><tracking-vehiclfes>
           </section>
           <section>
             <!-- Routes -->
