--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <link rel="icon" href="/static/images/favicon.ico">
   <link rel="stylesheet" href="/static/css/application.css">
 
-  <!--use leaflet.js for displaying and modifying the map-->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
-  integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
-  crossorigin=""/>
-
-  <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
-  integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
-  crossorigin=""></script>
+  <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css"></link>
+  <script src="/bower_components/leaflet/dist/leaflet.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
