rotate shuttle markers based on heading [buggy]

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <link rel="stylesheet" href="/bower_components/leaflet/dist/leaflet.css"></link>
   <script src="/bower_components/leaflet/dist/leaflet.js"></script>
+  <script src="/bower_components/leaflet-rotatedmarker/leaflet.rotatedMarker.js"></script>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
