Updated title bar to improve feel

--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
   <script src="/bower_components/leaflet/dist/leaflet.js"></script>
   <script src="/bower_components/leaflet-rotatedmarker/leaflet.rotatedMarker.js"></script>
 
-
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 
 <body>
   <div class="titleBar">
-    <img src="static/images/logo.png" style="height:100%;"></img>
-    <div class="navbar" style="float:right; height:100%;">
-      <form action="https://github.com/wtg/shuttletracker" style = "height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 30px; float:left;">
-        <button class="btn btn-outline-danger btn-sm" style="">View on GitHub</button>
+    <div class ="titleContent">
+      <p class="title">Shuttle Tracker</p>
+      <form action="https://github.com/wtg/shuttletracker" style = "height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 0px; float:right;">
+        <button class="btn btn-outline-danger btn-sm" style="">GitHub</button>
       </form>
-      <form action="https://webtech.union.rpi.edu/" style="height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 30px; float:left;">
-        <button class="btn btn-outline-danger btn-sm" style="">WebTech Group</button>
+      <form action="https://webtech.union.rpi.edu/" style="height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 0px; float:right;">
+        <button class="btn btn-outline-danger btn-sm" style="">WebTech</button>
       </form>
     </div>
+    <div class ="blur"></div>
+
   </div>
 
+
   <div class="floating-logo"><img style="height: 100%;" src="static/images/wtg.svg"></img></div>
-  <div id="mapid" style="height: 95%; z-index:0;"></div>
+  <div id="mapid" style="height: 100%; z-index:0;"></div>
 
   </script>
 </body>
