Titlebar fixes, retina map tiles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shuttle Tracking</title>
+  <title>Shuttle Tracker</title>
   <link rel="icon" href="/static/images/favicon.ico">
   <link rel="stylesheet" href="/static/css/application.css">
 
@@ -18,13 +18,11 @@
 <body>
   <div class="titleBar">
     <div class ="titleContent">
-      <p class="title">Shuttle Tracker</p>
-      <form action="https://github.com/wtg/shuttletracker" style = "height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 0px; float:right;">
-        <button class="btn btn-outline-danger btn-sm" style="">GitHub</button>
-      </form>
-      <form action="https://webtech.union.rpi.edu/" style="height: 70%; margin-top: 7px; margin-right: 5px; margin-bottom: 0px; float:right;">
-        <button class="btn btn-outline-danger btn-sm" style="">WebTech</button>
-      </form>
+      <p class="title">RPI Shuttle Tracker</p>
+      <div class="buttons">
+          <a href="https://github.com/wtg/shuttletracker" class="btn btn-outline-danger">GitHub</a>
+          <a href="https://webtech.union.rpi.edu/" class="btn btn-outline-danger">WebTech</a>
+      </div>
     </div>
     <div class ="blur"></div>
 
