Smaller WTG logo, remove console log messages

--- a/index.html
+++ b/index.html
@@ -17,25 +17,19 @@
 
 <body>
   <div class="titleBar">
-    <div class ="titleContent">
+    <div class="titleContent">
       <p class="title">RPI Shuttle Tracker</p>
       <div class="buttons">
           <a href="https://github.com/wtg/shuttletracker" class="btn btn-outline-danger">GitHub</a>
-          <a href="https://webtech.union.rpi.edu/" class="btn btn-outline-danger">WebTech</a>
+          <a href="https://webtech.union.rpi.edu" class="btn btn-outline-danger">WebTech</a>
       </div>
     </div>
-    <div class ="blur"></div>
-
+    <div class="blur"></div>
   </div>
-
-
-  <div class="floating-logo"><img style="height: 100%;" src="static/images/wtg.svg"></img></div>
+  <div class="floating-logo">
+      <img src="static/images/wtg.svg"></img>
+  </div>
   <div id="mapid" style="height: 100%; z-index:0;"></div>
-
-  </script>
-</body>
-
   <script src="static/js/app.js"></script>
-
-
+</body>
 </html>
