made delete buttons work for routes

--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
   <head>
     <title> Shuttle Tracking - Fleet Management </title>
@@ -12,10 +11,10 @@
 
   </head>
   <body>
+    <div class="prompt"><div class ="prompt-box"><p class="emphasis prompttext"> Are you sure? </p><button class = "button cbutton pbutton">Yes</button><button class = "button cbutton pbutton">No</button></div></div>
     <div class ="navbar"><p class="title">Shuttle Tracker</p><a class ="logout button" href="/admin/logout/">Logout</a></div>
     <div class="docBody">
       <div class = "routePanel">
-        
       </div>
       <div class = "mapPanel">
         <div id="mapid" style="height: 100%; width: 100%; background-color:black;z-index:0;"></div>
